UI design for SignUp -Part 1

--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -54,7 +54,7 @@
     color: white;
 }
 
-.searchInput::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+Input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: white;
 }
 
