--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -1,74 +1,9 @@
-.app-header {
-    background-color: darkgray;
-    height: 50px;
-    padding: 10px 32px 10px 16px;
-    z-index: 1;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
+.menu-button {
+    margin-right: 2px;
 }
 
-.login-button {
-    float: right;
-    display: flex;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-right: 2%;
-}
-
-.app-logo {
-    background: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flot: left;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.search {
-    background-color: darkgray;
-    display: flex;
-    border-radius: 4px;
-    width: 350px;
-    height: 45px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    align-self: center;
-}
-.searchInput{
-    width: 300px;
-    color: white;
-}
-.MuiInput-colorSecondary{
-    color: white;
-}
-.MuiInput-underline{
-    color: black;
-}
-
-.searchIcon {
-    padding: 3%;
-    color: white;
-}
-
-Input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-    color: white;
-}
-
-.my-snakbar{
-    float: left;
-}
-
-.aacountCircle{
-    padding: 5%;
-}
-
-.bookshow-button {
-    float: right;
-    margin-right: 8px;
+.header-container {
+    background-color: #A9A9A9 !important;
 }
 
 .tabs {
@@ -87,17 +22,9 @@ Input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: red;
 }
 
-@media (max-width: 992px) {
-    .flex-container {
-        flex-direction: column;
-    }
-    .left {
-        width: 100%;
-    }
-    .right {
-        width: 90%;
-    }
-    .released-movie-grid-item {
-        margin: 8px;
-    }
+.form-fields {
+    display: flex;
+    flex-direction: column;
+    padding: 0px 20px;
+    max-width: 300px;
 }
