--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -1,38 +1,59 @@
-/* 4 Column Grid */
-.grid-container {
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-}
-
-.trailer {
-    display:flex;
-}
-
-.star-box {
-    flex:1;
+.card-container {
     display: flex;
+    flex-wrap: wrap;
+    margin: 30px auto;
     justify-content: flex-start;
-    align-items: center;
-    background-color:yellowgreen;
-    height: 30px;
-    width: 100px;
-    color: white;
-    padding-left: 10px;
-    padding-right: 10px;
 }
 
-.rupee {
-    flex:1;
+.card-main {
+    width: 22%;
+    margin: 10px;
+}
+
+.card-mainM {
+    width: 30%;
+    margin: 10px;
+}
+
+.card-mainSM {
+    width: 45%;
+    margin: 10px;
+}
+
+.card-mainXSM {
+    width: 100%;
+    margin: 10px;
+}
+
+.noRestaurantMsg {
+    justify-content: start !important;
+}
+
+.restaurant-card,
+.restaurant-card-main {
+    max-width: 300px !important;
+    /*height: 340px ;*/
+    margin: auto;
+}
+
+.card-section2 {
     display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin-right: 10px;
+    justify-content: space-between;
+    padding: 5px 16px 16px 16px !important;
 }
 
-@media only screen and (max-width: 600px) { /* screen responsiveness */
-    .grid-container {
-        display: grid;
-        grid-template-columns: 100%;
-    }
+.card-rating {
+    background: #eacc5d;
+    padding: 5px 15px;
+    color: white;
+}
 
+.card-price {
+    padding: 5px;
+}
+
+.loading-spinner {
+    top: 50%;
+    position: absolute;
+    left: 45%;
 }
